[gd_scene load_steps=13 format=3 uid="uid://gigb868grykh"]

[ext_resource type="Script" path="res://scripts/item_spec.gd" id="1_3d3jq"]
[ext_resource type="FontFile" uid="uid://b13xmp6wu4ea" path="res://UI/craftpix-net-775352-game-user-interface-pixel-art/6 Font/CraftPixNet Survival Kit.otf" id="2_jpc7k"]
[ext_resource type="Script" path="res://scripts/buy-button.gd" id="3_4otf7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okvb3"]
bg_color = Color(0.230315, 0.230315, 0.230315, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v7bil"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glbq4"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gw14t"]
bg_color = Color(0.160784, 0.215686, 1, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgs8o"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b31ds"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru86v"]
bg_color = Color(0.160784, 0.384314, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ep8s8"]
bg_color = Color(0.160784, 0.384314, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="LabelSettings" id="LabelSettings_h0kaf"]
font_size = 6
shadow_color = Color(0, 0, 0, 1)

[node name="ItemSpec" type="Panel"]
offset_left = 168.0
offset_top = 10.0
offset_right = 318.0
offset_bottom = 194.0
theme_override_styles/panel = SubResource("StyleBoxFlat_okvb3")
script = ExtResource("1_3d3jq")

[node name="ItemSelected" type="Panel" parent="."]
layout_mode = 0
offset_left = 59.5
offset_top = 40.0
offset_right = 89.5
offset_bottom = 73.0

[node name="itemImage" type="TextureRect" parent="ItemSelected"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 28.0
offset_bottom = 29.0
expand_mode = 1

[node name="separetor" type="Panel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 91.0
offset_right = 143.0
offset_bottom = 93.0

[node name="separetor 2" type="Panel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 108.0
offset_right = 143.0
offset_bottom = 110.0

[node name="infoItem" type="Panel" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 111.0
offset_right = 143.0
offset_bottom = 162.0

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 164.0
offset_right = 143.0
offset_bottom = 181.0
theme_override_fonts/font = ExtResource("2_jpc7k")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxFlat_v7bil")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_glbq4")
theme_override_styles/hover = SubResource("StyleBoxFlat_gw14t")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_qgs8o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b31ds")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_ru86v")
theme_override_styles/normal = SubResource("StyleBoxFlat_ep8s8")
text = "BUY"
script = ExtResource("3_4otf7")

[node name="HoverTimer" type="Timer" parent="Button"]

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 94.0
offset_right = 142.0
offset_bottom = 106.0
text = "item nome exemplo"
label_settings = SubResource("LabelSettings_h0kaf")

[node name="ItemDescription" type="Label" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 112.0
offset_right = 140.0
offset_bottom = 157.0
text = "descrição do item aqui"
label_settings = SubResource("LabelSettings_h0kaf")

[node name="ItemPrice" type="Label" parent="."]
layout_mode = 0
offset_left = 67.0
offset_top = 73.0
offset_right = 86.0
offset_bottom = 86.0
text = "1000
"
label_settings = SubResource("LabelSettings_h0kaf")

[connection signal="mouse_entered" from="Button" to="Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="Button" method="_on_mouse_exited"]
